--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    <main class="main-columns">
+    <div class="container">
       <!-- Navigation -->
 
       <div class="topnav" id="myTopnav">
@@ -102,17 +102,38 @@
           </div>
         </div>
 
-        <!-- <section> -->
-        <div class="blog-card card3 title-box">
-          <div class="card">
-            <img src="img_avatar.png" alt="Avatar" style="width: 100%" />
-            <div class="container">
-              <h4><b>John Doe</b></h4>
-              <p>Architect & Engineer</p>
-            </div>
+        <div class="blog-card card3">
+          <div class="meta">
+            <div class="photo" style="
+                        background-image: url(https://storage.googleapis.com/chydlx/codepen/blog-cards/image-2.jpg);
+                      "></div>
+            <ul class="details">
+              <li class="author"><a href="#">Jane Doe</a></li>
+              <li class="date">July. 15, 2015</li>
+              <li class="tags">
+                <ul>
+                  <li><a href="#">Learn</a></li>
+                  <li><a href="#">Code</a></li>
+                  <li><a href="#">JavaScript</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+          <div class="description">
+            <h1>Mastering the Language</h1>
+            <h2>Java is not the same as JavaScript</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad eum
+              dolorum architecto obcaecati enim dicta praesentium, quam nobis!
+              Neque ad aliquam facilis numquam. Veritatis, sit.
+            </p>
+            <p class="read-more">
+              <a href="#">Read More</a>
+            </p>
           </div>
         </div>
 
+        <!-- <section> -->
         <div class="blog-card card4 title-box">
           <div class="card">
             <img src="img_avatar.png" alt="Avatar" style="width: 100%" />
@@ -132,8 +153,22 @@
             </div>
           </div>
         </div>
+
+        <div class="blog-card card6 title-box">
+          <div class="card">
+            <img src="img_avatar.png" alt="Avatar" style="width: 100%" />
+            <div class="container">
+              <h4><b>John Doe</b></h4>
+              <p>Architect & Engineer</p>
+            </div>
+          </div>
+        </div>
+
+        <footer>
+          <p>&copy;2022 Stephine Rasberry all rights reserved</p>
+        </footer>
       </section>
-    </main>
+    </div>
 
     <!-- Toggle the hamburger button -->
     <script>
